# mirus

./: .clang-format  .gitignore  .lldbinit  LICENSE  README.md  build.json  compile_flags.txt  xmake.lua
.github/workflows/: clang-format-check.yml
.xmake/macosx/arm64/: xmake.conf
docs/: building.md  managed-userspace.md  mirus-runtime-brainstorming.diagrams  project-plan.md
meta/: COMPONENTS  limine.cfg
meta/scripts/: get-limine-header.sh  install-deps.sh  make-hdd.sh  make-iso.sh  run-kernel-xray.sh  run-qemu-uefi.sh
src/apps/bake/: .gitignore  Cargo.toml  README.md
src/apps/bake/examples/basic_example/: build.json
src/apps/bake/examples/basic_example/include/: utils.h
src/apps/bake/examples/basic_example/include/math/: calculator.h
src/apps/bake/examples/basic_example/src/: main.c  utils.c
src/apps/bake/examples/basic_example/src/dep_a/: other.c
src/apps/bake/examples/basic_example/src/math/: calculator.c
src/apps/bake/examples/basic_example/tests/: test_calculator.c  test_utils.c
src/apps/bake/src/: build.rs  cli.rs  config.rs  dag.rs  error.rs  main.rs
src/apps/hello/: hello.c  xmake.lua
src/apps/kernel-xray/: Cargo.toml
src/apps/kernel-xray/src/: main.rs
src/apps/ktracer/: Cargo.toml
src/hal/: hal_logger.c  xmake.lua
src/kernel/: xmake.lua
src/kernel/core/: debug_logger.c  gdt.asm  gdt.c  idt.c  interrupts.asm  interrupts.c  isr.c  kernel.c  memory.c  panic.c  pmm.c  process.c  serial.c  string.c  syscalls.c  terminal.c
src/kernel/debug/: debug_logger.c  debug_tests.c  panic.c
src/kernel/drivers/: terminal.c
src/kernel/include/: memory.h  serial.h  terminal.h
src/kernel/interrupt/: isr.c
src/kernel/memory/: buddy.c  buddy_allocator.c  memory.c  pmm.c  vmm.c
src/libs/: README.md
(+60 files in other folders)
