[package]
name = "bake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
futures = "0.3.30"
glob = "0.3.1"
num_cpus = "1.16.0"
petgraph = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"] }

[[bin]]
name = "bake"
path = "src/main.rs"
