[package]
name = "kernel-xray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
serde_json = "1.0"
prettytable-rs = "0.10"
unicode-width = "0.1.10"
